<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">shotingLWP</string>
    <string name="description">Description!</string>

    <string name="bloodVisibleTime"                       >The time of blood disappearance</string>
    <string name="bloodCount"                             >Less blood or more blood?</string>
    <string name="bloodDraw"                              >Blood</string>
    <string name="bloodCanva"                             >Background</string>
    <string name="canvaSpeed"                             >Canva speed</string>
    <string name="messageShowTime"                        >The time of message disappearance</string>
    <string name="messageDraw"                            >Messages</string>
    <string name="spawnsShowTime"                         >The time of spawn-places disappearance</string>
    <string name="spawnsDraw"                             >Spawn-places</string>
    <string name="timerTimer"                             >Round time</string>
    <string name="timerDraw"                              >Timer and score</string>
    <string name="worldGianSpawnProbability"              >Probability of spawn of the giant according to the spawn of a unit</string>
    <string name="worldTowerSpawnProbability"             >Probability of spawn of the tower according to the spawn of a unit</string>
    <string name="worldHorizontalBorders"                 >Lateral bounds of spawn area</string>
    <string name="worldVerticalTopBorders"                >Upper bound of spawn area</string>
    <string name="worldVerticalBottomBorders"             >Lower bound of spawn area</string>


    <string name="bloodVisibleTime_description"           >For how long does blood stay visible?</string>
    <string name="bloodCount_description"                 >The number of spots of blood for one murder</string>
    <string name="bloodDraw_description"                  >Do you wanna have blood on your screen or not?</string>
    <string name="messageShowTime_description"            >The time when messages disappear</string>
    <string name="messageDraw_description"                >Do you wanna see messages on your screen or not?</string>
    <string name="spawnsShowTime_description"             >The time when spawn-places disappear</string>
    <string name="spawnsDraw_description"                 >Do you wanna see spawn-places on your screen or not?</string>
    <string name="timerTimer_description"                 >The period of time for which lasts one round</string>
    <string name="timerDraw_description"                  >Do you wanna see timer and score on your screen or not?</string>
    <string name="worldGianSpawnProbability_description"  >How rarely does the giant spawn? </string>
    <string name="worldTowerSpawnProbability_description" >How rarely does the tower spawn?</string>
    <string name="worldHorizontalBorders_description"     >What is the distance between spawn area and lateral bounds of the screen?</string>
    <string name="worldVerticalTopBorders_description"    >What is the distance between spawn area and upper bound of the screen?</string>
    <string name="worldVerticalBottomBorders_description" >What is the distance between spawn area and lower bound of the screen?</string>

    <string name="applySettings">Apply</string>
    <string name="cancelSettings">Cancel</string>
    <string name="setDefault">Reset</string>


    <string name="setDefaultAlertTitle">Reset configs</string>
    <string name="setDefaultMessage">Reset will cause the loss of the existing configuration! (If you don’t care about your perfectly hand-selected configs – boldly press “RESET”)</string>

    <string name="loading">Loading</string>
    <string name="loadingProgress">Please wait, loading settings and their names O_o</string>
    <string name="loadingToast">Please wait, loading may take some time</string>

    <string name="googlePlayReviewTitle">Отзыв Google Play</string>
    <string name="googlePlayReviewSummary">Пожалуйста, оцените наше приложение на Google Play</string>
    <string name="googlePlayGoReview">Оценить</string>
    <string name="googlePlayLaterReview">Позже</string>
    <string name="googlePlayDeclineReview">Никогда</string>

    <string name="thankyou">Thank you!</string>


</resources>
