<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">
    <com.acidspacecompany.shotinglwp.Configs.Preference.FloatValuePreference
            android:key="bloodVisibleTime"
            android:title="@string/bloodVisibleTime"
            android:summary="@string/bloodVisibleTime_description"
            android:icon="@drawable/time"
            android:defaultValue="0.5"
            min="0.3"
            max="1.0"
            />
    <com.acidspacecompany.shotinglwp.Configs.Preference.IntegerValuePreference
            android:key="bloodCount"
            android:title="@string/bloodCount"
            android:summary="@string/bloodCount_description"
            android:icon="@drawable/number"
            android:defaultValue="3"
            min="1"
            max="10"
            />
    <CheckBoxPreference
            android:key="bloodDraw"
            android:title="@string/bloodDraw"
            android:summary="@string/bloodDraw_description"
            android:icon="@drawable/doing"
            android:defaultValue="true"
        />
    <CheckBoxPreference
            android:key="bloodDraw"
            android:title="@string/bloodDraw"
            android:summary="@string/bloodDraw_description"
            android:icon="@drawable/doing"
            android:defaultValue="true"
            />
    <CheckBoxPreference
            android:key="canvaDraw"
            android:title="@string/bloodCanva"
            android:icon="@drawable/doing"
            android:defaultValue="true"
            />
    <com.acidspacecompany.shotinglwp.Configs.Preference.IntegerValuePreference
            android:key="canvasSpeed"
            android:inputType="number"
            android:title="@string/canvaSpeed"
            android:defaultValue="50"
            min="0"
            max="100"
            />
    <com.acidspacecompany.shotinglwp.Configs.Preference.FloatValuePreference
            android:key="messageShowTime"
            android:inputType="number"
            android:title="@string/messageShowTime"
            android:summary="@string/messageShowTime_description"
            android:icon="@drawable/time"
            android:defaultValue="1.5"
            min="0.5"
            max="5.0"
            />
    <CheckBoxPreference
            android:key="messageDraw"
            android:title="@string/messageDraw"
            android:summary="@string/messageDraw_description"
            android:icon="@drawable/doing"
            android:defaultValue="true"
            />
    <com.acidspacecompany.shotinglwp.Configs.Preference.FloatValuePreference
            android:key="spawnsShowTime"
            android:inputType="number"
            android:title="@string/spawnsShowTime"
            android:summary="@string/spawnsShowTime_description"
            android:icon="@drawable/time"
            android:defaultValue="0.6"
            min="0.5"
            max="5.0"
            />
    <CheckBoxPreference
            android:key="spawnsDraw"
            android:title="@string/spawnsDraw"
            android:summary="@string/spawnsDraw_description"
            android:icon="@drawable/doing"
            android:defaultValue="true"
            />
    <com.acidspacecompany.shotinglwp.Configs.Preference.IntegerValuePreference
            android:key="timerTimer"
            android:inputType="number"
            android:title="@string/timerTimer"
            android:summary="@string/timerTimer_description"
            android:icon="@drawable/time"
            android:defaultValue="300"
            min="15"
            max="600"
            />
    <CheckBoxPreference
            android:key="timerDraw"
            android:title="@string/timerDraw"
            android:summary="@string/timerDraw_description"
            android:icon="@drawable/doing"
            android:defaultValue="true"
            />
    <com.acidspacecompany.shotinglwp.Configs.Preference.IntegerValuePreference
            android:key="worldGianSpawnProbability"
            android:inputType="number"
            android:title="@string/worldGianSpawnProbability"
            android:summary="@string/worldGianSpawnProbability_description"
            android:icon="@drawable/probability"
            android:defaultValue="100"
            min="5"
            max="200"
            />
    <com.acidspacecompany.shotinglwp.Configs.Preference.IntegerValuePreference
            android:key="worldTowerSpawnProbability"
            android:inputType="number"
            android:title="@string/worldTowerSpawnProbability"
            android:summary="@string/worldTowerSpawnProbability_description"
            android:icon="@drawable/probability"
            android:defaultValue="40"
            min="5"
            max="200"
            />
    <com.acidspacecompany.shotinglwp.Configs.Preference.IntegerValuePreference
            android:key="worldHorizontalBorders"
            android:inputType="number"
            android:title="@string/worldHorizontalBorders"
            android:summary="@string/worldHorizontalBorders_description"
            android:icon="@drawable/horizontal"
            android:defaultValue="10"
            min="0"
            max="200"
            />
    <com.acidspacecompany.shotinglwp.Configs.Preference.IntegerValuePreference
            android:key="worldVerticalTopBorders"
            android:inputType="number"
            android:title="@string/worldVerticalTopBorders"
            android:summary="@string/worldVerticalTopBorders_description"
            android:icon="@drawable/top"
            android:defaultValue="45"
            min="0"
            max="200"
            />
    <com.acidspacecompany.shotinglwp.Configs.Preference.IntegerValuePreference
            android:key="worldVerticalBottomBorders"
            android:inputType="number"
            android:title="@string/worldVerticalBottomBorders"
            android:summary="@string/worldVerticalBottomBorders_description"
            android:icon="@drawable/bottom"
            android:defaultValue="10"
            min="0"
            max="200"
            />

</PreferenceScreen>