<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="match_parent" android:gravity="center_horizontal" android:weightSum="1">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/applySettings"
                android:id="@+id/applyButton" android:enabled="true" android:layout_weight="0.5"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancelSettings"
                android:id="@+id/cancelButton" android:enabled="true" android:layout_weight="0.5"/>
    </LinearLayout>
    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/setDefault"
            android:id="@+id/defaultButton" android:enabled="true"
            />
</LinearLayout>